[package]
name = "dwl-launcher"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "dwl-launch"
path = "src/main.rs"

[[bin]]
name = "dwl-edit"
path = "src/dwl-edit/main.rs"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.8.23"
uu_whoami = "0.0.30"

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = 3
